Fix overflow for code display

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body {
 
 pre {
     max-width: 100%;
+    max-height: 100vh;
+    overflow: auto;
 }
 
 small {
